# mcpat-1.1

./: .gitignore  HOWTO  Makefile.am  XML_Parse.cc  XML_Parse.h  configure.ac  core.cc  core.h  debug.h  iocontrollers.cc  iocontrollers.h  logic.cc  logic.h  main.cc  mcpat.mk  memoryctrl.cc  memoryctrl.h  mytime.cc  mytime.h  noc.cc  noc.h  processor.cc  processor.h  sharedcache.cc  sharedcache.h  streamlistener.cc  streamlistener.h  timer.cc  timer.h
cacti/: Makefile.am
test-files/x264_2cores/: config.xml
test-files/x264_4cores/: alldumps.xml
test-files/x264_6cores/: config.xml
