lib_LIBRARIES = libcacti.a

libcacti_a_SOURCES =
libcacti_a_SOURCES += arbiter.cc
libcacti_a_SOURCES += arbiter.h
libcacti_a_SOURCES += area.cc
libcacti_a_SOURCES += area.h
libcacti_a_SOURCES += bank.cc
libcacti_a_SOURCES += bank.h
libcacti_a_SOURCES += basic_circuit.cc
libcacti_a_SOURCES += basic_circuit.h
libcacti_a_SOURCES += cacti_interface.cc
libcacti_a_SOURCES += cacti_interface.h
libcacti_a_SOURCES += component.cc
libcacti_a_SOURCES += component.h
libcacti_a_SOURCES += const.h
libcacti_a_SOURCES += crossbar.cc
libcacti_a_SOURCES += crossbar.h
libcacti_a_SOURCES += decoder.cc
libcacti_a_SOURCES += decoder.h
libcacti_a_SOURCES += htree2.cc
libcacti_a_SOURCES += htree2.h
libcacti_a_SOURCES += io.cc
libcacti_a_SOURCES += io.h
libcacti_a_SOURCES += main.cc
libcacti_a_SOURCES += mat.cc
libcacti_a_SOURCES += mat.h
libcacti_a_SOURCES += nuca.cc
libcacti_a_SOURCES += nuca.h
libcacti_a_SOURCES += parameter.cc
libcacti_a_SOURCES += parameter.h
libcacti_a_SOURCES += router.cc
libcacti_a_SOURCES += router.h
libcacti_a_SOURCES += subarray.cc
libcacti_a_SOURCES += subarray.h
libcacti_a_SOURCES += technology.cc
libcacti_a_SOURCES += uca.cc
libcacti_a_SOURCES += Ucache.cc
libcacti_a_SOURCES += Ucache.h
libcacti_a_SOURCES += uca.h
libcacti_a_SOURCES += wire.cc
libcacti_a_SOURCES += wire.h

EXTRA_DIST =
EXTRA_DIST += README
EXTRA_DIST += cacti.i
EXTRA_DIST += cache.cfg
EXTRA_DIST += out_batch_test_result.csv
EXTRA_DIST += batch_tests
EXTRA_DIST += cacti.mk
EXTRA_DIST += contention.dat
EXTRA_DIST += makefile.old
# Source files not used by McPAT that fail to compile
EXTRA_DIST += highradix.cc
EXTRA_DIST += highradix.h
